# nuka

./: Cargo.toml  README.md  flake.nix
crates/nuka-core/: Cargo.toml
crates/nuka-core/src/: lib.rs  lib.rs.bak
crates/nuka-core/src/derivation/: generation.rs  mod.rs  runtime.rs
crates/nuka-core/src/io/: entry.rs  error.rs  id.rs  mod.rs  object.rs  store.rs
crates/nuka-core/src/sync/: store.rs
crates/nuka-core/src/sync/entry/: derivation.rs  mod.rs
crates/nuka-derivation/: Cargo.toml
crates/nuka-environments/: Cargo.toml
crates/nuka-environments/src/: main.rs
crates/nuka-exec/: Cargo.toml
crates/nuka-exec/src/: main.rs
crates/nuka-nu/: Cargo.toml  README.md
crates/nuka-nu/src/: context.rs  lib.rs  main.rs
crates/nuka-nu/src/commands/: derivation.rs  mod.rs
crates/nuka-nu/src/commands/fetch/: git.rs  mod.rs
crates/nuka-nu/src/commands/fix/: mod.rs
crates/nuka-nu/src/commands/wrap/: mod.rs
crates/nuka-patchelf/: Cargo.toml
crates/nuka-sips/: Cargo.toml
src/: main.rs
