[package]
name = "nuka-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# cap-std = "2.0"
# tonic = "0.10.2"
# iroh = "0.11.0"
quic-rpc = "0.6.1"
cap-async-std = "0.26.1"
directories = "5.0.1"
libp2p = "0.53.1"
thiserror = "1.0"
miette = "5.10.0"
log = "0.4"
blake3 = "1.5.0"
serde = "1.0"
